# OpenSceneGraphUtilities

./: CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/strip_custom_nodes/: CMakeLists.txt  main.cpp
